# AI-Resume-Screening

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
ai/: __init__.py  jd_matcher.py  prompts.py  resume_parser.py  scoring.py
backend/: api.py  config.py  n8n_webhook.py
database/: __init__.py  airtable.py  redis_cache.py
frontend/: app.py
parser/: __init__.py  docx_parser.py  pdf_parser.py
scheduler/: __init__.py  gmail.py  google_calendar.py
tests/: test_airtable.py  test_api.py  test_cache.py  test_n8n_webhook.py  test_parsers.py  test_pipeline.py  test_scheduler.py  test_scoring.py  test_validators.py
utils/: logger.py  validators.py
workflows/: n8n_workflow.json
