[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-screening"
version = "1.0.0"
description = "AI-powered recruitment platform: resume parsing, JD matching, interview scheduling"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "parser*", "ai*", "database*", "scheduler*", "utils*"]
